<resources>
    <!--View name and title-->
    <string name="app_name">PopularMovie</string>

    <!--Activity and Fragment title-->
    <string name="activity_movie_detail_title">MovieDetailActivity</string>
    <string name="activity_main_title">Pop-Movie</string>
    <string name="activity_detail_title">DetailActivity</string>

    <!--Dialog -->
    <string name="dialog_sort_title">Sort by</string>

    <!--Movie Information View-->
    <string name="text_view_title_title">Title</string>
    <string name="text_view_release_date_title">Release Date</string>
    <string name="text_view_rating_title">Rating</string>
    <string name="text_view_language_title">Language</string>
    <string name="text_view_status_title">Status</string>
    <string name="text_view_genre_title">Genre</string>
    <string name="text_view_description_title">Description</string>
    <string name="text_view_cast_title">Cast</string>
    <string name="text_view_cast_as">as</string>

    <!--TV Information View-->
    <string name="text_view_first_air_date_title">First Air Date</string>
    <string name="text_view_number_episode_title">Total Episode</string>
    <string name="text_view_number_session_title">Total Session</string>
    <string name="text_view_current_number_episode_title">First Air Date</string>
    <string name="text_view_origin_title">Origin Country</string>
    <string name="text_view_number_episode">%d/%d(%d%)</string>
    <string name="text_view_season_title">Season</string>

    <!--Discover movie tab-->
    <string name="tab_layout_now_playing_title">Now Playing</string>
    <string name="tab_layout_upcoming_title">Up Coming</string>
    <string name="tab_layout_popular_title">Popular</string>
    <string name="tab_layout_recently_added_title">Recently Added</string>

    <!--Movie and Show detail tab-->
    <string name="tab_layout_info_title">Info</string>
    <string name="tab_layout_videos_title">Videos</string>
    <string name="tab_layout_reviews_title">Reviews</string>
    <string name="tab_layout_poster_title">Posters</string>

    <!--Favourite tab-->
    <string name="tab_layout_movie_title">Movies</string>
    <string name="tab_layout_tv_title">Tvs</string>

    <!--Drawer Main Activity-->
    <string name="drawer_my_profile_title">My Profile</string>
    <string name="drawer_discover_title">Discover</string>
    <string name="drawer_account_title">Account</string>
    <string name="drawer_log_in_title">Log in</string>
    <string name="drawer_log_out_title">Log out</string>

    <!--Action Strings-->
    <string name="action_sort">Sort</string>
    <string name="action_settings">Settings</string>
    <string name="action_open_in_browser">Open in browser</string>

    <!--Image description-->
    <string name="image_description_poster">Movie Poster</string>
    <string name="image_description_backdrop">Backdrop of the movie</string>

    <!-- Message-->
    <string name="error_no_data">No data found.</string>
    <string name="error_no_connection">No connection.</string>
    <string name="error_server_problem">Server problem.</string>
    <string name="error_no_connection_button">Reload</string>
    <string name="success_login">Login has success. Close this window.</string>
    <string name="success_logout">Logout has success.</string>
    <string name="success_get_user_detail">Welcome %s</string>
    <string name="success_add_data">The item/record was updated.</string>
    <string name="success_delete_data">The item/record was removed.</string>
    <string name="error_authentication">Authentication failed: Login to gain access to your account.</string>
    <string name="error_resource_not_found">The resource you requested could not be found.</string>
    <string name="error_unknown">Unknown error. Error code : %d</string>
    <string name="error_login">Login has fail. Close and try again./n Error code : %s</string>
    <string name="error_login_require">You have to login to add movie to Favourite List.</string>

    <!--Button strings-->
    <string name="button_reload_title">Reload</string>

    <!--Toolbar title-->
    <string name="toolbar_my_moviedb_watch_list_title">@string/navigation_drawer_group_my_moviedb_watch_list_title</string>
    <string name="toolbar_my_moviedb_movie_list_title">@string/navigation_drawer_group_my_moviedb_movie_list_title</string>
    <string name="toolbar_my_moviedb_favourite_title">@string/navigation_drawer_group_my_moviedb_favourite_title</string>
    <string name="toolbar_discover_title">@string/navigation_drawer_group_discover_title</string>
    <string name="toolbar_discover_movie_title">Discover - Movie</string>
    <string name="toolbar_discover_tv_title">Discover - TV</string>

    <!--Dialog-->
    <string name="dialog_logout_id">dialog_logout</string>
    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_content">Do you wish to logout?</string>
    <string name="dialog_logout_button_positive">Logout</string>
    <string name="dialog_logout_button_negative">Cancel</string>

    <!--Drawer String in Main Activity-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_group_my_moviedb_title">My Movie DB</string>
    <string name="navigation_drawer_group_my_moviedb_watch_list_title">Watch List</string>
    <string name="navigation_drawer_group_my_moviedb_movie_list_title">Movie List</string>
    <string name="navigation_drawer_group_my_moviedb_favourite_title">Favourite</string>
    <string name="navigation_drawer_group_my_moviedb_log_out_title">Log out</string>
    <string name="navigation_drawer_group_my_moviedb_log_in_title">Log in</string>
    <string name="navigation_drawer_group_discover_title">Discover</string>
    <string name="navigation_drawer_group_discover_movie_title">Movie</string>
    <string name="navigation_drawer_group_discover_tv_title">TV</string>

    <!--Item Information-->
    <string name="item_information_no_connection">No connection!</string>
    <string name="item_information_bottom_of_the_page">Bottom of the page</string>

    <!--Sharedpreference strings-->
    <string name="sharedpreference_id">com.elkusnandi.popularmovie.PREFERENCE_FILE_KEY</string>
    <string name="sharedpreference_dialog_sort">sort</string>
    <string name="sharedpreference_session_id">session_id</string>
    <string name="sharedpreference_account_id">account_id</string>
    <string name="sharedpreference_user_name">user_name</string>
    <string name="sharedpreference_region_code">region_code</string>
    <string name="sharedpreference_profile_picture_path">profile_picture</string>
    <string name="sharedpreference_login_status">login_status</string>
    <string name="sharedpreference_region_code_default">US</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
